# libalpm-vala

./: CMakeLists.txt  Makefile  alpm-list.vapi  alpm-vala.h  alpm.vapi  pactree.vala  test.vala
bindings/: CMakeLists.txt  alpm-list.vapi  alpm.deps  alpm.vapi
examples/: CMakeLists.txt  pactree.vala  test.vala
src/: CMakeLists.txt  query.vala
util/: CMakeLists.txt  alpm-util.c  alpm-util.h
widgets/: CMakeLists.txt  PkgListView.vala
